# agent-harness-core

./: .gitattributes  .gitignore  AGENT.md  AGENTS.md  CHANGELOG.md  Cargo.toml  DOC-GUIDELINES.md  LICENSE-APACHE  LICENSE-MIT  README.md  SECURITY.md  harness.cmd  harness.ps1  index.html
crates/agent-harness-cli/: Cargo.toml
crates/agent-harness-cli/src/: main.rs  telegram_media.rs
crates/agent-harness-cli/tests/: trace_cli.rs
crates/agent-harness-cli/tests/fixtures/skill-replay-private/: cases.json  manifest.json
crates/agent-harness-core/: Cargo.toml
crates/agent-harness-core/src/: activation.rs  admission.rs  autonomy.rs  backend_auth.rs  backend_reasoning.rs  backend_reasoning_execution.rs  background.rs  channel_action.rs  channel_commands.rs  channel_delivery.rs  channel_delivery_history.rs  channel_delivery_index.rs  channel_identity.rs  channel_ingress.rs  channel_pipeline.rs  channel_runtime.rs  channel_session_key.rs  channel_session_transition.rs  channel_state.rs  child_execution_policy.rs  codex_backend_provenance.rs  codex_capability.rs  codex_protocol_compat.rs  codex_runtime.rs  codex_web_search.rs  config.rs  context_rollover.rs  coordinator_resume.rs  cron.rs  cron_runs.rs  cron_scheduler.rs  deploy.rs  deterministic_cron.rs  dream_director.rs  execution_mode.rs  external_effect.rs  goal_budget.rs  goal_closure.rs  goal_continuation.rs  goal_lineage.rs  (+86 more)
crates/agent-harness-core/tests/: continuity_effect_acceptance.rs  continuity_effect_fixture_integrity.rs  continuity_interactions_actions.rs  continuity_interactions_goal.rs  coordinator_resume.rs  memory_pack.rs  round22_fixture_integrity.rs  worker_runtime_terminal.rs
crates/agent-harness-core/tests/fixtures/continuity-effects/: account-continuation-double-bind-replay.json  approval-waiting-channel-actions-replay.json  bounded-yield-partial-final-replay.json  channel-command-active-goal-cancel-replay.json  deadline-drain-operation-plan-replay.json  discord-active-goal-observe-silent-stop-replay.json  fresh-turn-after-goal-final-replay.json  historical-goal-closure-replay.json  mcp-elicitation-external-effect-replay.json  ordinary-task-drain-recovery-replay.json  parent-subagent-completion-ownership-replay.json  productive-deadline-renewal-replay.json  queue-lease-renewal-replay.json  queued-before-lease-progress-replay.json  server-overloaded-protocol-replay.json  timeout-continuation-handoff-replay.json
crates/openclaw-harness-cli/: Cargo.toml
crates/openclaw-harness-cli/src/: main.rs
crates/openclaw-harness-core/: Cargo.toml
crates/openclaw-harness-core/src/: activation.rs  channel_commands.rs  channel_delivery.rs  channel_ingress.rs  channel_pipeline.rs  channel_runtime.rs  channel_state.rs  codex_runtime.rs  cron.rs  deterministic_cron.rs  harness_registry.rs  harness_skills.rs  importer.rs  lib.rs  logging.rs  memory.rs  progress.rs  prompt.rs  registry.rs  runtime_pipeline.rs  runtime_queue.rs  runtime_worker.rs  skills.rs  status.rs  subagents.rs  supervisor.rs  turns.rs
docs/: atomic-write-audit.md  (+35 more)
(+39 files in other folders)
