[package]
name = "agent-harness-cli"
version = "0.10.0"
description = "CLI for the self-hosted Agent Harness runtime: run LLM agents over Telegram/Discord with durable queues and auditable receipts"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[[bin]]
name = "agent-harness"
path = "src/main.rs"

[dependencies]
agent-harness-core = { path = "../agent-harness-core" }
ring = "0.17"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ureq = { version = "2", features = ["json"] }
