[package]
name = "agent-harness-core"
version = "0.1.0"
description = "Self-hosted AI agent harness core: durable queues, channel permission gates, Codex/OpenRouter runtime pipeline, and JSONL receipts"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
base64 = "0.22"
ring = "0.17"
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ureq = { version = "2", features = ["json"] }
windows-sys = { version = "0.52", features = ["Win32_Foundation", "Win32_Security", "Win32_System_Threading"] }
