[package]
name = "openclaw-harness-cli"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[[bin]]
name = "openclaw-harness"
path = "src/main.rs"

[dependencies]
openclaw-harness-core = { path = "../openclaw-harness-core" }
serde_json = "1"
ureq = { version = "2", features = ["json"] }
